fixing img text overlap

--- a/main.scss
+++ b/main.scss
@@ -256,11 +256,9 @@ a {
                 box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
 
                 .project-img {
-                    height: 250px;
 
                     img {
                         width: 100%;
-                        min-height: 250px;
                         border-radius: 5px;
                         object-fit: cover;
                         opacity: 0.15;
